# rust-example-multi-architecture

./: README.md
.github/workflows/: rust.yml
service/: Cargo.toml  build.rs
service/env/: service.yml
service/image/: Dockerfile.aarch64  Dockerfile.curl  podman-compose.yml
service/image/toolchain/: Dockerfile.toolchain-aarch64
service/src/: main.rs
